--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 historii z cyklu “Poczytaj mi, mamo”... i z czegoś co dziś możemy nazwać “ciekawością
                 twórczą”.
             </h3>
-            <div class="sign">Krystyna Bocheńska i Natalia Leszczyńska</div>
+            <div class="sign">Krystyna Bocheńska i Natalia Leszczyńska</div> <br><br><br>
             Ideą projektu było stworzenie spektaklu dla dzieci jako efektu poszukiwań i inspiracji zrodzonych w bezpo-
             średnim kontakcie z najmłodszym widzem oraz stworzenie platformy do współpracy na linii rodzice - peda-
             godzy - artyści. Punktem wyjścia naszych działań były warsztaty z dziećmi oraz konsultacje z pedagogami i
@@ -56,7 +56,10 @@
                 Przedszkole Integracyjne nr 312 w Warszawie<br>
                 Przedszkole Specjalne nr 249 w Warszawie<br>
                 Dom Kultury “Świt” w Warszawie<br>
-            </h3>
+            </h3> 
+            <br>
+            <br>
+            <br>
             
             <h1>„Małe historie”</h1>
             <h3>
@@ -69,18 +72,10 @@
             najbardziej lubi zdradzać rozmaite sekrety dzieciom. Spektakl jest fuzją teatru lalek, teatru ożywionej formy,
             improwizacji aktorskiej i muzycznej ze światem dzieci.
             <h2>Twórcy spektaklu</h2>
-            <h3>Natalia Leszczyńska (kreacjaaktorska,muzyka, scenografia)</h3>
-            Aktorka, lalkarka, opowiadaczka. Prowadzi autorską audycję w Radio Bajka, gdzie na antenie na żywo wymy-
-            śla bajki razem ze słuchaczami. Swoje badania dotyczące metodologii opowiadania i zbierania baśni prowa-
-            dzi w ramach Ma Fundacji. Poszukuje na styku teatru, rytuału i sztuki akcji, która dociera do małych i dużych
-            tak, by mówić o sprawach najważniejszych w sposób najprostszy i magiczny zarazem. W “Małych historiach”
-            wciela się w postać Mamy, animuje lalki, gra na akordeonie i śpiewa.
+            <h3>Natalia Leszczyńska (kreacja aktorska,muzyka, scenografia)</h3>
+            Aktorka, lalkarka, opowiadaczka. Prowadzi autorską audycję w Radio Bajka, gdzie na antenie na żywo wymyśla bajki razem ze słuchaczami. Swoje badania dotyczące metodologii opowiadania i zbierania baśni prowadzi w ramach Ma Fundacji. Poszukuje na styku teatru, rytuału i sztuki akcji, która dociera do małych i dużych tak, by mówić o sprawach najważniejszych w sposób najprostszy i magiczny zarazem. W “Małych historiach” wciela się w postać Mamy, animuje lalki, gra na akordeonie i śpiewa.
             <h3>Anna Szawiel (reżyseria, adaptacja tekstu)</h3>
-            Absolwentka białostockiego Wydziału Sztuki Lalkarskiej Akademii Teatralnej im. Aleksandra Zelwerowicza w
-            Warszawie, Szkoły Muzycznej II stopnia w Białymstoku i Wydziału Dziennikarstwa na Uniwersytecie Warszaw-
-            skim. Grała m.in. w spektaklach „SuperMarket” (2005) Jerzego Lacha w warszawskim Teatrze Wytwórnia,
-            „Usługi płatne” (2008) Anny Piotrowskiej w stołecznym Mufmi Teatrze Tańca. Związana z niezależną sceną
-            teatralną.
+            Absolwentka białostockiego Wydziału Sztuki Lalkarskiej Akademii Teatralnej im. Aleksandra Zelwerowicza w Warszawie, Szkoły Muzycznej II stopnia w Białymstoku i Wydziału Dziennikarstwa na Uniwersytecie Warszawskim. Grała m.in. w spektaklach „SuperMarket” (2005) Jerzego Lacha w warszawskim Teatrze Wytwórnia, „Usługi płatne” (2008) Anny Piotrowskiej w stołecznym Mufmi Teatrze Tańca. Związana z niezależną sceną teatralną.
             <h3>Katarzyna Mazurek (lalki)</h3>
             Aktorka teatralna i filmowa, absolwentka szkoły teatralnej Studium Aktorskie w Olsztynie. Studiowała pe-
             dagogikę ogólną oraz kulturoznawstwo na Uniwersytecie Warszawskim. Malarka, projektantka, rzeźbiarka.
