--- a/index.html
+++ b/index.html
@@ -112,7 +112,10 @@
                 Zapraszamy do konkursu “Moja pierwsza recenzja”. Czekamy na Wasze pisane lub obrazkowe recenzje.
                 Konkurs skierowany jest zarówno do adresatów naszych teatralnych pocztówek, jak i innych małych wiel-
                 bicieli teatru. Szczegółowe zasady konkursu znajdą Pastwo w regulaminie:
-                <div class="foot">pobierz regulamin (PDF)</div>
+                <div class="foot"><a href="">pobierz regulamin (PDF)</a></div>
+                <div class="rightAlign">
+                    <img src="pict/pocztowka.png">
+                </div>
             </div>
         </div>
     </div>
