--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>I co było dalej</title>
-    <link href='http://fonts.googleapis.com/css?family=Ubuntu+Condensed|Open+Sans' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans|Roboto&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="style.css" />
     <link rel="Shortcut icon" href="pict/iko.png"/>
     <script type="text/javascript" src="scripts/jquery-1.10.2.min.js"></script>
