--- a/index.html
+++ b/index.html
@@ -60,6 +60,11 @@
             średnim kontakcie z najmłodszym widzem oraz stworzenie platformy do współpracy na linii rodzice - peda-
             godzy - artyści. Punktem wyjścia naszych działań były warsztaty z dziećmi oraz konsultacje z pedagogami i
             rodzicami. Warsztaty oraz próby do spektaklu “Małe historie” trwały od kwietnia do czerwca 2014 roku.
+
+            <h2>
+                <iframe width="900" height="506" src="http://www.youtube.com/embed/aIP523Wc2ck?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+            </h2>
+
             <h2 class="center">Naszymi partnerami byli:</h2>
             <h3 class="center">
                 VII Ogródek Jordanowski w Warszawie<br>
