--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <div class="sign">Krystyna Bocheńska i Natalia Leszczyńska</div> 
             <br><br><br>
             Ideą projektu było stworzenie spektaklu dla dzieci jako efektu poszukiwań i inspiracji zrodzonych w bezpo-
-            średnim kontakcie z najmłodszym widzem oraz stworzenie platformy do współpracy na linii rodzice - peda-
+            średnim kontakcie z najmłodszym widzem oraz stworzenie platformy do współpracy na linii rodzice - peda
             godzy - artyści. Punktem wyjścia naszych działań były warsztaty z dziećmi oraz konsultacje z pedagogami i
             rodzicami. Warsztaty oraz próby do spektaklu “Małe historie” trwały od kwietnia do czerwca 2014 roku.
 
@@ -91,30 +91,29 @@
                 Piotr Bocheński<br>
                 Magdalena Jeżak<br>
                 Sylwia Zielińska<br>
-                Anna Bąk
-            <h2>Kalendarium zdarzeń „I co było dalej”</h2>
+          <h2>Kalendarium zdarzeń „I co było dalej”</h2>
             <div onclick="slideToggle(this, 'mwHistory');" class="clickable">Poznaj historię projektu [+]</div>
             <div id="mwHistory" class="hidden">
-                31 maja 2014– Spotkanie dla twórców,pedagogów,animatorów i rodzicówwsiedzibie fundacji Ponadto(Buddaplay, ul. Białostocka 9)<br>
-                3 czerwca2014 –Warsztaty w Przedszkolu Samorządowym nr184<br>
-                8 czerwca2014 –Warsztaty w CentrumKulturyPrawosławnej<br>
+                31 maja 2014– Spotkanie dla twórców,pedagogów,animatorów i rodziców w siedzibie fundacji Ponadto (Buddaplay, ul. Białostocka 9)<br>
+                3 czerwca2014 – Warsztaty w Przedszkolu Samorządowym nr184<br>
+                8 czerwca2014 – Warsztaty w CentrumKulturyPrawosławnej<br>
                 10 czerwca 2014 – Warsztaty w VII OgródkuJordanowskim<br>
                 12 czerwca 2014 – Warsztaty w Przedszkolu Specjalnym nr 249<br>
                 16 czerwca 2014 – Warsztaty w Przedszkolu Integracyjnym nr312<br>
-                22 czerwca 2014 – Pokaz przedpremierowy „Małych Historii” wCentrum Kultury Prawosławnej<br>
-                23 czerwca2014 –Pokazprzedpremierowy„MałychHistorii”w Przedszkolu Integracyjnym nr 312<br>
+                22 czerwca 2014 – Pokaz przedpremierowy „Małych Historii” w Centrum Kultury Prawosławnej<br>
+                23 czerwca2014 – Pokaz przedpremierowy „Małych Historii” w Przedszkolu Integracyjnym nr 312<br>
                 24 czerwca 2014 - Pokaz przedpremierowy „Małych Historii” w Przedszkolu Samorządowym nr 184<br>
-                26 czerwca 2014 - Pokazprzedpremierowy„MałychHistorii”w PrzedszkoluSpecjalnym nr 249<br>
+                26 czerwca 2014 - Pokaz przedpremierowy „Małych Historii” w Przedszkolu Specjalnym nr 249<br>
                 26 czerwca 2014 - Pokaz przedpremierowy „Małych Historii” w Domu Kultury Świt<br>
-                27czerwca 2014 –Pokazprzedpremierowy„MałychHistorii” wVII Ogródku Jordanowskim<br>
-                Pracowitewakacje– ewaluacja, rozmyślania, konsultacje,zmiany<br>
-                28 września 2014 - PREMIERA w DomuKulturyŚródmieściew Warszawie, scena naul. Smolnej<br>
-                4 października 2014 – POKAZPLENEROWY „Małych Historii” w parku Picassa wWarszawie(BiałołęckiOśrodek Kultury)<br>
-                16 października 2014– trzy pokazy„MałychHistorii”w SzkolePodstawowej nr 267 w Warszawie, ul. Braci Załuskich 1<br>
-                21 października 2014 - trzy pokazy „MałychHistorii”w Filii Szkoły Podstawowej nr 258 w Warszawie , ul. Namysłowska 1<br>
-                8 listopada 2014 – spotkanie i konsultacje dla twórców, pedagogów i animatoróworazwarsztaty dla dzieci w Przestrzeni Kultury SoojkawŁomiankach<br>
-                15 listopada 2014– ogłoszenie wyników konkursu MOJAPIERWSZARECENZJA<br>
-                30 listopada 2014– Zakończenie... I co będziedalej?<br>
+                27 czerwca 2014 – Pokaz przedpremierowy „Małych Historii” w VII Ogródku Jordanowskim<br>
+                Pracowite wakacje – ewaluacja, rozmyślania, konsultacje, zmiany<br>
+                28 września 2014 - PREMIERA w Domu Kultury Śródmieście w Warszawie, scena na ul. Smolnej<br>
+                4 października 2014 – POKAZ PLENEROWY „Małych Historii” w parku Picassa w Warszawie(Białołęcki Ośrodek Kultury)<br>
+                16 października 2014 – trzy pokazy „Małych Historii” w Szkole Podstawowej nr 267 w Warszawie, ul. Braci Załuskich 1<br>
+                21 października 2014 - trzy pokazy „Małych Historii” w Filii Szkoły Podstawowej nr 258 w Warszawie, ul. Namysłowska 1<br>
+                8 listopada 2014 – spotkanie i konsultacje dla twórców, pedagogów i animatorów oraz warsztaty dla dzieci w Przestrzeni Kultury Soojka w Łomiankach<br>
+                15 listopada 2014 – ogłoszenie wyników konkursu MOJA PIERWSZA RECENZJA<br>
+                30 listopada 2014 – Zakończenie... I co będziedalej?<br>
             </div>
             <h1 id="spectacle">„Małe historie”</h1>
             <h3>
