--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
                 Aktorka teatralna i filmowa, absolwentka szkoły teatralnej Studium Aktorskie w Olsztynie. Studiowała pedagogikę ogólną oraz kulturoznawstwo na Uniwersytecie Warszawskim. Malarka, projektantka, rzeźbiarka. Współpracowała z Teatrem Dramatycznym im. A. Mickiewicza w Częstochowie, z Teatrem Dramatycznym im. S. Jaracza w Olsztynie. Odtwórczyni roli tytułowej w filmie Anniki Glac „Bunny”. Realizuje projekty plastyczne, projektuje i wykonuje lalki teatralne.
             <br>
             <h2>Zaproś nas</h2>
-                Spektakl (monodram) powstał z myślą o prezentacji również w warunkach nieteatralnych. Trwa około 45 min, akcja/zabawa “moja pierwsza recenzja” około 20 min. Jeśli chcieliby Państwo zaprosić “Małe Historie”,                       prosimy o kontakt:
-            <div id="contact" class="foot">
+                Spektakl (monodram) powstał z myślą o prezentacji również w warunkach nieteatralnych. Trwa około 45 min, akcja/zabawa “Moja pierwsza recenzja” około 20 min. Jeśli chcieliby Państwo zaprosić “Małe Historie”,                       prosimy o kontakt:
+                <div id="contact" class="foot">
                 <a href="mailto:icobylodalej@gmail.com">icobylodalej@gmail.com</a><br>
                 tel. 732 634 268
                 <br><br><br><br>
@@ -150,12 +150,12 @@
             </div>
             <div class="right">
                 <h1 id="competition">Rysunkowe recenzje</h1>
-                    Po spektaklach proponujemy widzom udział w akcji/zabawie „moja pierwsza recenzja”. Rozdajemy kartki
+                    Po spektaklach proponujemy widzom udział w akcji/zabawie „Moja pierwsza recenzja”. Rozdajemy kartki
                     pocztowe i zachęcamy do wysłania pozdrowień i swego rodzaju recenzji bezpośrednio po spektaklu.
                     Zaprosiliśmy Was do konkursu “Moja pierwsza recenzja”.Czekaliśmy na Wasze pisane lubobrazkowe recenzje.
                     Konkurs skierowany był zarówno do adresatów naszych teatralnych pocztówek, jak i innych małych
                     wielbicieli teatru. Szczegółowe zasady konkursu znajdą Pastwo wregulaminie:
-                <div class="foot"><a href="regulamin_konkursu.pdf">pobierz regulamin (PDF)</a></div>
+                    <div class="foot"><a href="regulamin_konkursu.pdf">pobierz regulamin (PDF)</a></div>
                 <div class="rightAlign">
                     <img src="pict/pocztowka.png">
                 </div>                
@@ -174,7 +174,7 @@
             granego 21.10.2014 r. w SP nr 258 w Warszawie
             <h3>Jury przyznało również dwa wyróżnienia:</h3>
             1. Danusia Kotynia lat 7 – „Za dobrą energię” (pocztówka ze spektaklu Małe Historie granego w Szkole Podstawowej nr 267. Nagrodą jest książka: Ewa Kozyry-Pawlak, Ja Bobik, Nasza Księgarnia2014<br>
-            2. Łucja Sala lat 7 –„Za pracowitość i cudowne kolory”(pocztówka ze spektaklu Małe Historie granego wSP 267 w Warszawie) Nagrodą jest książka: Izabela Mikrut,
+            2. Łucja Sala lat 7 – „Za pracowitość i cudowne kolory”(pocztówka ze spektaklu Małe Historie granego wSP 267 w Warszawie) Nagrodą jest książka: Izabela Mikrut,
             Co się zdarzyło w piórniku, Nasza Księgarnia 2014
             <h3>Zapraszamy do galerii nagrodzonych prac.</h3>
             Jury: Natalia Leszczyńska, Julia Umeda-Zasacka, Krystyna Bocheńska
