--- a/index.html
+++ b/index.html
@@ -63,11 +63,14 @@
             Ideą projektu było stworzenie spektaklu dla dzieci jako efektu poszukiwań i inspiracji zrodzonych w bezpo-
             średnim kontakcie z najmłodszym widzem oraz stworzenie platformy do współpracy na linii rodzice - peda
             godzy - artyści. Punktem wyjścia naszych działań były warsztaty z dziećmi oraz konsultacje z pedagogami i
-            rodzicami. Warsztaty oraz próby do spektaklu “Małe historie” trwały od kwietnia do czerwca 2014 roku.
+            rodzicami. Warsztaty oraz próby do spektaklu “Małe historie” trwały od kwietnia do czerwca 2014 roku. 
 
             <h2>
                 <iframe width="900" height="506" src="http://www.youtube.com/embed/aIP523Wc2ck?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
             </h2>
+            
+            <h2></h2>
+              Projekt &quot;I co było dalej...?" dofinansowano ze środków Ministerstwa Kultury i Dziedzictwa Narodowego<br>
 
             <h2>Partnerzy projektu</h2>
                 Dom Kultury „Świt” w Warszawie<br>
