--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
                 <iframe width="900" height="506" src="http://www.youtube.com/embed/aIP523Wc2ck?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
             </h2>
             
-            <h2></h2>
-              Projekt &quot;I co było dalej...?" dofinansowano ze środków Ministerstwa Kultury i Dziedzictwa Narodowego<br>
+            <h3>Projekt &quot;I co było dalej...?" dofinansowano ze środków Ministerstwa Kultury i Dziedzictwa Narodowego</h3>
+              <br>
 
             <h2>Partnerzy projektu</h2>
                 Dom Kultury „Świt” w Warszawie<br>
